Main UI
- Add webtoon direction icon

Redaer UI
- Support for webtoons reading
- Add vertical thumb strip for webtoons

Build
- Improve Android release builder

Fixes
- Fix spacing on compact view
- Fix thumbnails center jumps when zooming